force-app/main/default/objects/InteractionSummary/InteractionSummary.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>