force-app/main/default/objects/InteractionSummary/fields/Interaction_Summary_Number__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Summary_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Interaction Summary Number</description>
    <displayFormat>IS-{00000000}</displayFormat>
    <label>Interaction Summary Number</label>
    <type>AutoNumber</type>
</CustomField>