force-app/main/default/objects/InteractionSummary/fields/Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Notes__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Meeting Notes</description>
    <label>Meeting Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>