force-app/main/default/objects/InteractionSummary/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Next Steps</description>
    <label>Next Steps</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>